--- a/styl/layout/header.styl
+++ b/styl/layout/header.styl
@@ -1,4 +1,4 @@
-header.site
+.header.site
   border-bottom 3px double #bbb
   clear()
   padding: 1em 0 5em
@@ -11,7 +11,7 @@ header.site
       color txt
       padding-left: 0 1em
 
-  nav.site
+  .nav.site
     col 240
     ul
       float: right
