--- a/styl/layout/header.styl
+++ b/styl/layout/header.styl
@@ -1,15 +1,12 @@
 .header.site
   border-bottom 3px double #bbb
   clear()
-  padding: 1em 0 5em
+  padding: 1em 0 1em
   h1 
     col 120
     a
-      font 1.25em serif
-      line-height: m*5
-      text-transform: uppercase
-      color txt
-      padding-left: 0 1em
+      padding-top: 6em
+      display: block
 
   .nav.site
     col 240
