--- a/styl/layout/footer.styl
+++ b/styl/layout/footer.styl
@@ -1,8 +1,16 @@
 .footer.site
   cnt()
   border-top 3px double #bbb
-  padding: 0 0 3em
-  p
-    padding: 0 1em
-    line-height 3em
-    font-size: 85%
+  padding: 1em 0 3em
+  ul
+    padding: 0 .5em
+    li
+      float: right
+      padding: 0 .5em
+      line-height 20px
+      font-size: 85%
+      &.copyright
+        float: left
+      &.facebook
+        margin: 1px 0
+
