coming soon tags

--- a/styl/layout/header.styl
+++ b/styl/layout/header.styl
@@ -13,10 +13,7 @@
     ul
       float: right
       li
-        float: left
-        &.inactive
-          a
-            color #ddd
+        float left
         a
           display block
           padding: 0 1em
@@ -24,4 +21,3 @@
           line-height m*5
           text-transform uppercase
           position relative
-         
