--- a/styl/layout/index.styl
+++ b/styl/layout/index.styl
@@ -39,3 +39,25 @@ body
   padding: 0 80px
   background hsl(60,10,99)
   box-shadow b40 1px 1px 9px, inset b15 0 0 15px, w25 0 0 150px
+
+li.inactive
+  a
+    color #ddd
+    position relative
+    transition()
+    &:after
+      display block
+      position absolute
+      bottom -2em
+      left -6em
+      z-index 10000
+      padding .75em 1em
+      border-radius 5px
+      background hsl(60,10,99)
+      box-shadow b25 0 1px 3px, inset b10 0 0 5px
+      content 'Coming soon.'
+      font 1em/1.5 serif
+      color txt
+      opacity: 0
+    &:hover:after
+      opacity: 1
