--- a/css/screen.css
+++ b/css/screen.css
@@ -14,6 +14,9 @@ body{font:14px Cambria,Georgia,"serif";line-height:150%;color:#333;background:#0
 #access{display:none}
 #container{width:100%;max-width:640px;margin:0 auto;margin:2em auto;padding:0 80px;background:#fdfdfc;-moz-box-shadow:rgba(0,0,0,0.4) 1px 1px 9px,inset rgba(0,0,0,0.15) 0 0 15px,rgba(255,255,255,0.25) 0 0 150px;-webkit-box-shadow:rgba(0,0,0,0.4) 1px 1px 9px,inset rgba(0,0,0,0.15) 0 0 15px,rgba(255,255,255,0.25) 0 0 150px;-o-box-shadow:rgba(0,0,0,0.4) 1px 1px 9px,inset rgba(0,0,0,0.15) 0 0 15px,rgba(255,255,255,0.25) 0 0 150px;box-shadow:rgba(0,0,0,0.4) 1px 1px 9px,inset rgba(0,0,0,0.15) 0 0 15px,rgba(255,255,255,0.25) 0 0 150px}
 #container:after{clear:both;display:block;content:""}
+li.inactive a{color:#ddd;position:relative;transition:all .15s ease;-webkit-transition:all .15s ease;-moz-transition:all .15s ease;-o-transition:all .15s ease;}
+li.inactive a:after{display:block;position:absolute;bottom:-2em;left:-6em;z-index:10000;padding:.75em 1em;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;background:#fdfdfc;-moz-box-shadow:rgba(0,0,0,0.25) 0 1px 3px,inset rgba(0,0,0,0.1) 0 0 5px;-webkit-box-shadow:rgba(0,0,0,0.25) 0 1px 3px,inset rgba(0,0,0,0.1) 0 0 5px;-o-box-shadow:rgba(0,0,0,0.25) 0 1px 3px,inset rgba(0,0,0,0.1) 0 0 5px;box-shadow:rgba(0,0,0,0.25) 0 1px 3px,inset rgba(0,0,0,0.1) 0 0 5px;content:"Coming soon.";font:1em / 1.5 Cambria,Georgia,"serif";color:#333;opacity:0}
+li.inactive a:hover:after{opacity:1}
 .header.site{border-bottom:3px double #bbb;padding:1em 0 1em;}
 .header.site:after{clear:both;display:block;content:""}
 .header.site h1{width:33.333333333333336%;float:left;}
@@ -21,7 +24,6 @@ body{font:14px Cambria,Georgia,"serif";line-height:150%;color:#333;background:#0
 .header.site .nav.site{width:66.66666666666667%;float:left;}
 .header.site .nav.site ul{float:right;}
 .header.site .nav.site ul li{float:left;}
-.header.site .nav.site ul li.inactive a{color:#ddd}
 .header.site .nav.site ul li a{display:block;padding:0 1em;font:75% Cambria,Georgia,"serif";line-height:70px;text-transform:uppercase;position:relative}
 body.home .section#content p:first-of-type{font-size:125%;padding:0 0 28px;margin:0 0 28px;border-bottom:1px solid #ddd}
 body.store .section#content h2{font:bold 75% Cambria,Georgia,"serif";color:#666;text-transform:uppercase;letter-spacing:2px;margin:0 0 1em}
@@ -38,7 +40,6 @@ body.store .section#content ul.products li.product p.buy a:hover{border-color:#e
 .section#content .article p span.drop{display:block;float:left;font:5.2em / .86 Cambria,Georgia,"serif";padding-right:7px;-webkit-font-smoothing:antialiased}
 .section#content .nav{width:16.666666666666668%;float:left;padding-left:16.666666666666668%;}
 .section#content .nav ul li{border-top:1px solid #ddd;}
-.section#content .nav ul li.inactive a{color:#ddd}
 .section#content .nav ul li a{display:block;padding:0 .5em;line-height:3em}
 .footer.site{width:100%;max-width:640px;margin:0 auto;border-top:3px double #bbb;padding:1em 0 3em;}
 .footer.site:after{clear:both;display:block;content:""}
