--- a/styl/layout/footer.styl
+++ b/styl/layout/footer.styl
@@ -5,12 +5,11 @@
   ul
     padding: 0 .5em
     li
-      float: right
+      float: left
       padding: 0 .5em
       line-height 20px
       font-size: 85%
-      &.copyright
-        float: left
-      &.facebook
+      &.facebook, &.twitter
+        float: right
         margin: 1px 0
 
