--- a/css/screen.css
+++ b/css/screen.css
@@ -44,6 +44,5 @@ body.store .section#content ul.products li.product p.buy a:hover{border-color:#e
 .footer.site{width:100%;max-width:640px;margin:0 auto;border-top:3px double #bbb;padding:1em 0 3em;}
 .footer.site:after{clear:both;display:block;content:""}
 .footer.site ul{padding:0 .5em;}
-.footer.site ul li{float:right;padding:0 .5em;line-height:20px;font-size:85%;}
-.footer.site ul li.copyright{float:left}
-.footer.site ul li.facebook{margin:1px 0}
+.footer.site ul li{float:left;padding:0 .5em;line-height:20px;font-size:85%;}
+.footer.site ul li.facebook,.footer.site ul li.twitter{float:right;margin:1px 0}
