--- a/css/layout/index.styl
+++ b/css/layout/index.styl
@@ -13,6 +13,7 @@ default-font(size = m)
   font m serif
   line-height 150%
   color txt
+  font-weight normal
 
 link()
   color anchor
@@ -21,9 +22,6 @@ link()
     color anchorh
 a
   link()
-
-html
-  overflow-y scroll
 
 body
   default-font()
