--- a/css/mixins/mixins.styl
+++ b/css/mixins/mixins.styl
@@ -1,4 +1,4 @@
-serif = Cambria, Georgia, 'serif'
+serif = Georgia, 'serif'
 mono = Consolas, "Lucida Console", Courier New, monospace
 sans = "Helvetica Neue", Arial, Helvetica, sans-serif
 lucida = "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", sans-serif
