--- a/css/screen.css
+++ b/css/screen.css
@@ -1,369 +1,52 @@
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section,
-summary,
-time,
-mark,
-audio,
-video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-size: 100%;
-  font: inherit;
-  vertical-align: baseline;
-}
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-body {
-  line-height: 1;
-}
-ol,
-ul {
-  list-style: none;
-}
-blockquote,
-q {
-  quotes: none;
-}
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: none;
-}
-ins {
-  text-decoration: none;
-}
-del {
-  text-decoration: line-through;
-}
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
-a {
-  color: #08c;
-  text-decoration: none;
-}
-a:hover {
-  color: #ed390c;
-}
-html {
-  overflow-y: scroll;
-}
-body {
-  font: 14px Cambria, Georgia, "serif";
-  line-height: 150%;
-  color: #333;
-  background: #0f618a;
-  height: 100%;
-}
-#access {
-  display: none;
-}
-#container {
-  width: 100%;
-  max-width: 640px;
-  margin: 0 auto;
-  margin: 2em auto;
-  padding: 0 80px;
-  background: #fdfdfc;
-  -moz-box-shadow: rgba(0,0,0,0.4) 1px 1px 9px, inset rgba(0,0,0,0.15) 0 0 15px, rgba(255,255,255,0.25) 0 0 150px;
-  -webkit-box-shadow: rgba(0,0,0,0.4) 1px 1px 9px, inset rgba(0,0,0,0.15) 0 0 15px, rgba(255,255,255,0.25) 0 0 150px;
-  -o-box-shadow: rgba(0,0,0,0.4) 1px 1px 9px, inset rgba(0,0,0,0.15) 0 0 15px, rgba(255,255,255,0.25) 0 0 150px;
-  box-shadow: rgba(0,0,0,0.4) 1px 1px 9px, inset rgba(0,0,0,0.15) 0 0 15px, rgba(255,255,255,0.25) 0 0 150px;
-}
-#container:after {
-  clear: both;
-  display: block;
-  content: "";
-}
-li.inactive a {
-  color: #ddd;
-  position: relative;
-  transition: all 0.15s ease;
-  -webkit-transition: all 0.15s ease;
-  -moz-transition: all 0.15s ease;
-  -o-transition: all 0.15s ease;
-}
-li.inactive a:after {
-  display: block;
-  position: absolute;
-  bottom: -2em;
-  left: -6em;
-  z-index: 10000;
-  padding: 0.75em 1em;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  background: #fdfdfc;
-  -moz-box-shadow: rgba(0,0,0,0.25) 0 1px 3px, inset rgba(0,0,0,0.1) 0 0 5px;
-  -webkit-box-shadow: rgba(0,0,0,0.25) 0 1px 3px, inset rgba(0,0,0,0.1) 0 0 5px;
-  -o-box-shadow: rgba(0,0,0,0.25) 0 1px 3px, inset rgba(0,0,0,0.1) 0 0 5px;
-  box-shadow: rgba(0,0,0,0.25) 0 1px 3px, inset rgba(0,0,0,0.1) 0 0 5px;
-  content: "Coming soon.";
-  font: 1em / 1.5 Cambria, Georgia, "serif";
-  color: #333;
-  opacity: 0;
-}
-li.inactive a:hover:after {
-  opacity: 1;
-}
-.header.site {
-  border-bottom: 3px double #bbb;
-  padding: 1em 0 1em;
-}
-.header.site:after {
-  clear: both;
-  display: block;
-  content: "";
-}
-.header.site h1 {
-  width: 33.333333333333336%;
-  float: left;
-}
-.header.site h1 a {
-  padding-top: 6em;
-  display: block;
-}
-.header.site .nav.site {
-  width: 66.66666666666667%;
-  float: left;
-}
-.header.site .nav.site ul {
-  float: right;
-}
-.header.site .nav.site ul li {
-  float: left;
-}
-.header.site .nav.site ul li a {
-  display: block;
-  padding: 0 1em;
-  font: 75% Cambria, Georgia, "serif";
-  line-height: 70px;
-  text-transform: uppercase;
-  position: relative;
-}
-body.home li.home a,
-body.store li.store a,
-body.about li.about a {
-  color: #333;
-  cursor: default;
-}
-body.home .section#content p:first-of-type {
-  font-size: 125%;
-  padding: 0 0 28px;
-  margin: 0 0 28px;
-  border-bottom: 1px solid #ddd;
-}
-.section#content {
-  width: 100%;
-  max-width: 640px;
-  margin: 0 auto;
-  padding: 3em 0 0;
-}
-.section#content:after {
-  clear: both;
-  display: block;
-  content: "";
-}
-.section#content .article {
-  font: 16px / 1.5 Cambria, Georgia, "serif";
-  width: 66.66666666666667%;
-  float: left;
-}
-.section#content .article .section {
-  margin: 0 0 5em;
-}
-.section#content .article p {
-  margin: 0 0 14px;
-}
-.section#content .article p span.drop {
-  display: block;
-  float: left;
-  font: 5.2em / 0.86 Cambria, Georgia, "serif";
-  padding-right: 7px;
-  -webkit-font-smoothing: antialiased;
-}
-.section#content h2 {
-  font: bold 75% Cambria, Georgia, "serif";
-  color: #666;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  margin: 0 0 1em;
-}
-.section#content h3 {
-  font-size: 1.5em;
-  margin: 0 0 14px;
-}
-.section#content ul.products li.product {
-  margin: 0 0 5em;
-}
-.section#content ul.products li.product:after {
-  clear: both;
-  display: block;
-  content: "";
-}
-.section#content ul.products li.product p.desc {
-  margin: 0 0 1.5em;
-}
-.section#content ul.products li.product a.img {
-  display: block;
-  border: 1px solid #ddd;
-  padding: 2px;
-  background: #fff;
-  margin: 0 0 1.5em;
-}
-.section#content ul.products li.product a.img:hover {
-  border-color: #08c;
-}
-.section#content ul.products li.product p.price {
-  font-size: 1.5em;
-  line-height: 42px;
-  float: right;
-}
-.section#content ul.products li.product p.buy a {
-  display: inline-block;
-  float: left;
-  line-height: 40px;
-  color: #fff;
-  text-shadow: rgba(0,0,0,0.3) 0 1px 0;
-  padding: 0 1em;
-  -moz-border-radius: 5px;
-  -webkit-border-radius: 5px;
-  border-radius: 5px;
-  border: 1px solid #08c;
-  background: -webkit-gradient(linear, left top, left bottom, from(#3bf), to(#0099e6));
-  background: -moz-linear-gradient(#3bf, #0099e6);
-  -moz-box-shadow: rgba(0,0,0,0.3) 1px 1px 3px, inset rgba(255,255,255,0.5) 0 0 5px;
-  -webkit-box-shadow: rgba(0,0,0,0.3) 1px 1px 3px, inset rgba(255,255,255,0.5) 0 0 5px;
-  -o-box-shadow: rgba(0,0,0,0.3) 1px 1px 3px, inset rgba(255,255,255,0.5) 0 0 5px;
-  box-shadow: rgba(0,0,0,0.3) 1px 1px 3px, inset rgba(255,255,255,0.5) 0 0 5px;
-}
-.section#content ul.products li.product p.buy a:hover {
-  border-color: #ed390c;
-  background: -webkit-gradient(linear, left top, left bottom, from(#ff5c33), to(#e62e00));
-  background: -moz-linear-gradient(#ff5c33, #e62e00);
-}
-.section#content .nav {
-  width: 16.666666666666668%;
-  float: left;
-  padding-left: 16.666666666666668%;
-}
-.section#content .nav ul li {
-  border-top: 1px solid #ddd;
-}
-.section#content .nav ul li a {
-  display: block;
-  padding: 0 0.5em;
-  line-height: 3em;
-}
-.footer.site {
-  width: 100%;
-  max-width: 640px;
-  margin: 0 auto;
-  border-top: 3px double #bbb;
-  padding: 1em 0 3em;
-}
-.footer.site:after {
-  clear: both;
-  display: block;
-  content: "";
-}
-.footer.site ul {
-  padding: 0 0.5em;
-}
-.footer.site ul li {
-  float: left;
-  padding: 0 0.5em;
-  line-height: 20px;
-  font-size: 85%;
-}
-.footer.site ul li.facebook,
-.footer.site ul li.twitter {
-  float: right;
-  margin: 1px 0;
-}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;font:inherit;vertical-align:baseline}
+article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
+body{line-height:1}
+ol,ul{list-style:none}
+blockquote,q{quotes:none}
+blockquote:before,blockquote:after,q:before,q:after{content:none}
+ins{text-decoration:none}
+del{text-decoration:line-through}
+table{border-collapse:collapse;border-spacing:0}
+a{color:#08c;text-decoration:none;}
+a:hover{color:#ed390c}
+body{font:14px Georgia,"serif";line-height:150%;color:#333;font-weight:normal;background:#0f618a;height:100%}
+#access{display:none}
+#container{width:100%;max-width:640px;margin:0 auto;margin:2em auto;padding:0 80px;background:#fdfdfc;-moz-box-shadow:rgba(0,0,0,0.40) 1px 1px 9px,inset rgba(0,0,0,0.15) 0 0 15px,rgba(255,255,255,0.25) 0 0 150px;-webkit-box-shadow:rgba(0,0,0,0.40) 1px 1px 9px,inset rgba(0,0,0,0.15) 0 0 15px,rgba(255,255,255,0.25) 0 0 150px;-o-box-shadow:rgba(0,0,0,0.40) 1px 1px 9px,inset rgba(0,0,0,0.15) 0 0 15px,rgba(255,255,255,0.25) 0 0 150px;box-shadow:rgba(0,0,0,0.40) 1px 1px 9px,inset rgba(0,0,0,0.15) 0 0 15px,rgba(255,255,255,0.25) 0 0 150px}
+#container:after{clear:both;display:block;content:""}
+li.inactive a{color:#ddd;position:relative;transition:all .15s ease;-webkit-transition:all .15s ease;-moz-transition:all .15s ease;-o-transition:all .15s ease;}
+li.inactive a:after{display:block;position:absolute;bottom:-2em;left:-6em;z-index:10000;padding:.75em 1em;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;background:#fdfdfc;-moz-box-shadow:rgba(0,0,0,0.25) 0 1px 3px,inset rgba(0,0,0,0.10) 0 0 5px;-webkit-box-shadow:rgba(0,0,0,0.25) 0 1px 3px,inset rgba(0,0,0,0.10) 0 0 5px;-o-box-shadow:rgba(0,0,0,0.25) 0 1px 3px,inset rgba(0,0,0,0.10) 0 0 5px;box-shadow:rgba(0,0,0,0.25) 0 1px 3px,inset rgba(0,0,0,0.10) 0 0 5px;content:"Coming soon.";font:1em/1.5 Georgia,"serif";color:#333;opacity:0}
+li.inactive a:hover:after{opacity:1}
+.header.site{border-bottom:3px double #bbb;padding:1em 0 1em;}
+.header.site:after{clear:both;display:block;content:""}
+.header.site h1{width:33.333333333333336%;float:left;}
+.header.site h1 a{padding-top:6em;display:block}
+.header.site .nav.site{width:66.66666666666667%;float:left;}
+.header.site .nav.site ul{float:right;}
+.header.site .nav.site ul li{float:left;}
+.header.site .nav.site ul li a{display:block;padding:0 1em;font:75% Georgia,"serif";line-height:70px;text-transform:uppercase;position:relative}
+body.home li.home a,body.store li.store a,body.about li.about a{color:#333;cursor:default}
+body.home .section#content p:first-of-type{font-size:125%;padding:0 0 28px;margin:0 0 28px;border-bottom:1px solid #ddd}
+.section#content{width:100%;max-width:640px;margin:0 auto;padding:3em 0 0;}
+.section#content:after{clear:both;display:block;content:""}
+.section#content .article{font:16px/1.5 Georgia,"serif";width:66.66666666666667%;float:left;}
+.section#content .article .section{margin:0 0 5em}
+.section#content .article p{margin:0 0 14px;}
+.section#content .article p span.drop{display:block;float:left;font:5.2em/.86 Georgia,"serif";padding-right:7px;-webkit-font-smoothing:antialiased}
+.section#content h2{font:bold 75% Georgia,"serif";color:#666;text-transform:uppercase;letter-spacing:2px;margin:0 0 1em}
+.section#content h3{font-size:1.5em;margin:0 0 14px}
+.section#content ul.products li.product{margin:0 0 5em;}
+.section#content ul.products li.product:after{clear:both;display:block;content:""}
+.section#content ul.products li.product p.desc{margin:0 0 1.5em}
+.section#content ul.products li.product a.img{display:block;border:1px solid #ddd;padding:2px;background:#fff;margin:0 0 1.5em;}
+.section#content ul.products li.product a.img:hover{border-color:#08c}
+.section#content ul.products li.product p.price{font-size:1.5em;line-height:42px;float:right}
+.section#content ul.products li.product p.buy a{display:inline-block;float:left;line-height:40px;color:#fff;text-shadow:rgba(0,0,0,0.30) 0 1px 0;padding:0 1em;-moz-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;border:1px solid #08c;background:-webkit-gradient(linear,left top,left bottom,from(#3bf),to(#0099e6));background:-moz-linear-gradient(#3bf,#0099e6);-moz-box-shadow:rgba(0,0,0,0.30) 1px 1px 3px,inset rgba(255,255,255,0.50) 0 0 5px;-webkit-box-shadow:rgba(0,0,0,0.30) 1px 1px 3px,inset rgba(255,255,255,0.50) 0 0 5px;-o-box-shadow:rgba(0,0,0,0.30) 1px 1px 3px,inset rgba(255,255,255,0.50) 0 0 5px;box-shadow:rgba(0,0,0,0.30) 1px 1px 3px,inset rgba(255,255,255,0.50) 0 0 5px;}
+.section#content ul.products li.product p.buy a:hover{border-color:#ed390c;background:-webkit-gradient(linear,left top,left bottom,from(#ff5c33),to(#e62e00));background:-moz-linear-gradient(#ff5c33,#e62e00)}
+.section#content .nav{width:16.666666666666668%;float:left;padding-left:16.666666666666668%;}
+.section#content .nav ul li{border-top:1px solid #ddd;}
+.section#content .nav ul li a{display:block;padding:0 .5em;line-height:3em}
+.footer.site{width:100%;max-width:640px;margin:0 auto;border-top:3px double #bbb;padding:1em 0 3em;}
+.footer.site:after{clear:both;display:block;content:""}
+.footer.site ul{padding:0 .5em;}
+.footer.site ul li{float:left;padding:0 .5em;line-height:20px;font-size:85%;}
+.footer.site ul li.facebook,.footer.site ul li.twitter{float:right;margin:1px 0}
